# civ-map-generator

./: Cargo.toml  README.md  build.rs
src/: fractal.rs  lib.rs  map_parameters.rs  nation.rs  tile.rs
src/component/: mod.rs
src/component/map_component/: area_id.rs  base_terrain.rs  feature.rs  mod.rs  natural_wonder.rs  terrain_type.rs
src/grid/: direction.rs  mod.rs  offset_coordinate.rs
src/grid/hex_grid/: hex.rs  mod.rs
src/grid/square_grid/: mod.rs  square.rs
src/jsons/: Tutorials.json
src/jsons/Civ V - Gods & Kings/: BaseTerrains.json  Belief.json  Buildings.json  Features.json  GlobalUniques.json  Nations.json  NaturalWonder.json  NaturalWonders.json  Resource.json  Resources.json  Technology.json  TerrainType.json  TerrainTypes.json  TileImprovement.json  TileImprovements.json  TileResources.json  UnitType.json  VictoryType.json
src/jsons/Civ V - Vanilla/: BaseTerrain.json  BaseTerrains.json  Buildings.json  Eras.json  Feature.json  Features.json  ModOptions.json  Nation.json  Nations.json  NaturalWonder.json  NaturalWonders.json  Resource.json  Resources.json  Technology.json  TerrainTypes.json  TileImprovements.json  TileResources.json
src/map/: How to add a map type.MD  fractal.rs  mod.rs  pangaea.rs
src/map_generator/: How to add a map type.MD  fractal.rs  mod.rs  pangaea.rs
src/ruleset/: base_terrain.rs  belief.rs  building.rs  city_state_type.rs  common.rs  difficulty.rs  era.rs  feature.rs  global_unique.rs  mod.rs  nation.rs  natural_wonder.rs  policy.rs  quest.rs  resource.rs  ruin.rs  specialist.rs  speed.rs  tech.rs  terrain_type.rs  tile_improvement.rs  tile_resource.rs  unique.rs  unit.rs  unit_promotion.rs  unit_type.rs  victory_type.rs
src/tile_component/: feature.rs  mod.rs  resource.rs
src/tile_map/: fractal.rs  map_parameters.rs  mod.rs  tile.rs
(+107 files in other folders)
