[package]
name = "civ_map_generator"
version = "0.1.0"
authors = ["lishaoxia1985 <lishaoxia1985@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A civilization map generator"
repository = "https://github.com/lishaoxia1985/civ-map-generator"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.11"
once_cell = "1.20"
rand = "0.8"
image = "0.25"
glam = "0.27"
enum-map = "2.7.3"
bitflags = "2.9.1"
arrayvec = "0.7.6"

[build-dependencies]
serde_json = "1.0"
