[package]
name = "civ_map_generator"
version = "0.1.1"
authors = ["lishaoxia1985 <lishaoxia1985@hotmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A civilization map generator"
repository = "https://github.com/lishaoxia1985/civ-map-generator"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.11"
rand = "0.9"
image = "0.25"
glam = "0.30"
enum-map = "2.7"
bitflags = "2.9"
arrayvec = "0.7"

[build-dependencies]
serde_json = "1.0"
